Fixé paddings et font-size sur les collapse

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -14,7 +14,7 @@ $main-color: #ff6060;
   border-radius: 10px;
   color: white;
   margin-top: 30px;
-  padding: 10px;
+  padding: 10px 21px 10px 21px;
   font-weight: 500;
   font-size: 24px;
   line-height: 34.22px;
@@ -25,6 +25,7 @@ $main-color: #ff6060;
     margin-top: 18px;
   }
   h2 {
+    font-size: 24px;
     display: block;
   }
   i {
