--- a/src/pages/Fiche/fiche.scss
+++ b/src/pages/Fiche/fiche.scss
@@ -180,6 +180,8 @@ body {
       margin-top: 0px;
     }
     h2 {
+      font-size: 18px;
+      line-height: 25.67px;
       @media (max-width: 470px) {
         font-size: 13px;
         line-height: 18.54px;
